@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Tentative fix for bug #1519089: item cannot afford in container can be taken from store.
+server/shop.c: do a real recursion in can_pay.
+Ryp 2006-11-16
 
 include\{treasure.h path.h face.h commands.h win32.h shstr.h timers.h
   config.h funcpoint.h object.h loader.h attack.h race.h newserver.h
